# app/controllers/index.js
@@ -1,8 +1,10 @@
 const adminControllers = require('./admin-controller')
 const productsControllers = require('./products-controller')
+const reservationsControllers = require('./reservations-controller')
 
 module.exports = {
   home: (_req, res) => res.json({ message: 'Working success !!!' }),
   admin: adminControllers,
-  product: productsControllers
+  product: productsControllers,
+  reservation: reservationsControllers
 }
